--- a/proyecto/pregapp/src/LogIn/LogIn.css
+++ b/proyecto/pregapp/src/LogIn/LogIn.css
@@ -12,3 +12,9 @@
     font-weight: bold;
     color: #000000;
 }
+
+.textLink {
+    color: #00d2cf;
+    background-color: transparent;
+    border: none;
+}
