--- a/proyecto/pregapp/src/pages/logIn/LogIn.css
+++ b/proyecto/pregapp/src/pages/logIn/LogIn.css
@@ -1,23 +1,7 @@
-.buttonStandard {
-    font-size: 25px;
-}
-.buttonSalir {
-    font-size: 25px;
-    background-color: #E94E4E;
-    color: #000000;
-    border-radius: 24px;
-    width: 136px;
-    height: 52px;
-    border:#000000 0.3px solid;
-    @media (max-width: 768px) {
-        width: 100px;
-        height: 40px;
-        font-size: 20px;
-    }
-}
 .imgLogo {
     width: 240px;
     height: 240px;
+    float: center;
 }
 
 .title {
@@ -26,7 +10,20 @@
     color: #000000;
 }
 
+.container {
+    background-color: white;
+    padding: 40px;
+    text-align: center;
+}
+
+.estiloTexto {
+    font-size: 20px;
+    color: #000000;
+    margin-top: 10px;
+}
+
 .textLink {
+    font-size: 20px;
     color: #00d2cf;
     background-color: transparent;
     border: none;
