--- a/proyecto/pregapp/src/pages/logIn/LogIn.css
+++ b/proyecto/pregapp/src/pages/logIn/LogIn.css
@@ -2,6 +2,7 @@
     width: 240px;
     height: 240px;
     float: center;
+    
 }
 
 .title {
@@ -14,12 +15,16 @@
     background-color: white;
     padding: 40px;
     text-align: center;
+    
+    
 }
 
 .estiloTexto {
     font-size: 20px;
     color: #000000;
-    margin-top: 10px;
+    margin-top: 10px; 
+    margin-right: 10px; 
+    
 }
 
 .textLink {
@@ -28,3 +33,17 @@
     background-color: transparent;
     border: none;
 }
+
+.buttonContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 16px; 
+    margin-top: 20px;
+}
+
+.inputText {
+    padding-left: 12px; 
+  }
+
