--- a/proyecto/pregapp/src/styles/buttons.css
+++ b/proyecto/pregapp/src/styles/buttons.css
@@ -1,12 +1,23 @@
-.buttonStandard {
+.buttonAdvance {
     font-size: 25px;
+    background-color: #2ECC71;
+    color: #000000;
+    border-radius: 30px;
+    width: 200px;
+    height: 52px;
+    border:#000000 0.3px solid;
+    @media (max-width: 768px) {
+        width: 100px;
+        height: 40px;
+        font-size: 20px;
+    }
 }
-.buttonSalir {
+.buttonBack {
     font-size: 25px;
     background-color: #E94E4E;
     color: #000000;
-    border-radius: 24px;
-    width: 136px;
+    border-radius: 30px;
+    width: 200px;
     height: 52px;
     border:#000000 0.3px solid;
     @media (max-width: 768px) {
