--- a/proyecto/pregapp/src/pages/logIn/LogIn.css
+++ b/proyecto/pregapp/src/pages/logIn/LogIn.css
@@ -29,7 +29,7 @@
 
 .textLink {
     font-size: 20px;
-    color: #00d2cf;
+    color: #00968f;
     background-color: transparent;
     border: none;
 }
