--- a/proyecto/pregapp/src/pages/register/Register.css
+++ b/proyecto/pregapp/src/pages/register/Register.css
@@ -2,19 +2,22 @@
     width: 240px;
     height: 240px;
     float: center;
-    
+    margin-bottom: -20px; 
 }
 
 .title {
     font-size: 30px;
     font-weight: bold;
     color: #000000;
+    margin-top: 0px;
 }
 
 .container {
-    background-color: white;
+    background-image: url('../../images/fondo_1.webp');
+    background-size: cover;
     padding: 40px;
     text-align: center;
+  
     
     
 }
