login adaptado a figma

--- a/proyecto/pregapp/src/styles/globalStyles.css
+++ b/proyecto/pregapp/src/styles/globalStyles.css
@@ -1,3 +1,10 @@
 .app{
     font-family: 'inter', sans-serif;
 }
+.labelText {
+    min-width: 120px;
+    text-align: left;
+    font-size: 20px;
+    color: #000000;
+    
+}
