--- a/proyecto/pregapp/src/pages/logIn/LogIn.css
+++ b/proyecto/pregapp/src/pages/logIn/LogIn.css
@@ -3,17 +3,24 @@
     height: 240px;
     float: center;
     margin-bottom: -20px;
+    object-fit: cover;
+    border-radius: 50%;
     
 }
 .title {
     font-size: 30px;
     font-weight: bold;
     color: #000000;
+    
 }
+
 
 .container {
     background-image: url('../../images/fondo_1.webp');
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 100vh; /* Esto asegura que cubre toda la pantalla */
     padding: 40px;
     text-align: center;
     
@@ -41,3 +48,18 @@
     padding-left: 12px; 
   }
 
+.circulo{
+    width: 220px;
+    height: 220px;
+    border-radius: 50%;
+    background-color: #FFFFFF; 
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    float: center;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  }
+  
