--- a/proyecto/pregapp/src/styles/buttons.css
+++ b/proyecto/pregapp/src/styles/buttons.css
@@ -40,3 +40,43 @@
         font-size: 16px;
     }
 }
+
+.buttonAnswer{
+    width: 730px;
+    height: 40px;
+border-radius: 24px;
+background: #FFF;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+border: 0.3px solid #000000;
+@media (max-width: 768px) {
+    width: 243px;
+    height: 39px;
+    
+}
+}
+.buttonAnswerWrong{
+    width: 730px;
+    height: 40px;
+border-radius: 24px;
+background: #E94E4E;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+border: 0.3px solid #000000;
+@media (max-width: 768px) {
+    width: 243px;
+    height: 39px;
+    
+}
+}
+.buttonAnswerRight{
+    width: 730px;
+    height: 40px;
+border-radius: 24px;
+background:  #2ECC71;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+border: 0.3px solid #000000;
+@media (max-width: 768px) {
+    width: 243px;
+    height: 39px;
+    
+}
+}
