--- a/proyecto/pregapp/src/pages/settings/Settings.css
+++ b/proyecto/pregapp/src/pages/settings/Settings.css
@@ -7,3 +7,58 @@
     padding: 40px;
     text-align: center;
 }
+
+.containerSettings{
+    margin-top: 10%;
+}
+
+.logo { /* sonido y musica*/
+    width: 150px;     
+    height: auto;        
+    margin: 10px;         
+}
+
+.control-row {
+    display: flex;             
+    justify-content: space-between; 
+    align-items: center;        
+    margin-bottom: 20px;        /* Añadimos un poco de espacio entre las filas */
+}
+
+/* Estilo del slider */
+.slider-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 20px;
+}
+  
+.slider {
+    width: 200px;
+    height: 20px;
+    background-color: #ddd;
+    border-radius: 15px;
+    cursor: pointer;
+    -webkit-appearance: none; /* Eliminar estilo predeterminado en Webkit (Chrome, Safari) */
+}
+  
+  /* boton del slider */
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 40px;
+    height: 40px;
+    background-color: #4CAF50;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+  /*Lo mismo deprendiendo del navegador*/
+.slider::-moz-range-thumb {
+    width: 40px;
+    height: 40px;
+    background-color: #4CAF50;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
