--- a/proyecto/pregapp/src/pages/profile/Profile.css
+++ b/proyecto/pregapp/src/pages/profile/Profile.css
@@ -14,6 +14,7 @@
 .Profile {
     background-image: url('../../images/fondo_1.webp');
     background-size:cover;
+    min-height: 100vh; /* Esto asegura que cubre toda la pantalla */
     padding: 40px;
     text-align: center;
     
