--- a/proyecto/pregapp/src/pages/question/Question.css
+++ b/proyecto/pregapp/src/pages/question/Question.css
@@ -8,6 +8,11 @@
    
     margin: 0 auto;
     text-align: left;
+
+    @media (max-width: 768px) {
+      width: 282px;
+      height: 155px;
+    }
   }
   
 .buttonContainer2{
@@ -17,5 +22,8 @@
     align-items: center;
     gap: 330px; 
     margin-top: 20px;
+    @media (max-width: 768px) {
+      gap: 50px;
+    }
   
 }
