--- a/proyecto/pregapp/src/styles/globalStyles.css
+++ b/proyecto/pregapp/src/styles/globalStyles.css
@@ -14,3 +14,12 @@
     text-align: left;
     margin-left: 10px;
 }
+.imgLogo {
+    width: 240px;
+    height: 240px;
+    float: center;
+    margin-bottom: -20px;
+    object-fit: cover;
+    border-radius: 50%;
+    
+}
