Creacion del popupButton y modificaciones
Se ha creado el componente Popup y se ha añadido a los botones salir de la pagina home y questions (solo lo puse en esas paginas porque son las dos unicas paginas donde pulsar sin querer puede hacer perder al usuario algun tipo de progreso en la aplicacion; salir en home: cierra la sesion, salir en questions: sale de la partida y pierde el progreso de esta misma)

A parte se ha modificado el mensage de acceso denegado para que el usuario sepa la razon por la que la pagina no se muestra cuando intenta acceder a una pagina que no sea register o login cuando no ha iniciado sesion.

--- a/proyecto/pregapp/src/styles/globalStyles.css
+++ b/proyecto/pregapp/src/styles/globalStyles.css
@@ -23,3 +23,32 @@
     border-radius: 50%;
     
 }
+
+.ventana-popup {
+    position: fixed;
+    width: 270px;
+    height: 150px;
+    top: 50%;
+    left: 50%;
+    border-radius: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    transform: translate(-50%, -50%);
+    background: #ffffff;
+    padding: 25px 50px;
+}
+
+.contenido-popup {
+    text-align: center;
+}
+
+#contenedor-popup {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 65vh;
+    margin: 0;
+}
+
+.h1-popup {
+    font-size: 20px;
+}
