--- a/proyecto/pregapp/src/styles/buttons.css
+++ b/proyecto/pregapp/src/styles/buttons.css
@@ -80,3 +80,29 @@ border: 0.3px solid #000000;
     
 }
 }
+
+.buttonContainerPopup{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 50px; 
+    margin-top: 20px;
+    @media (max-width: 768px) {
+      gap: 10px;
+    }
+  
+}
+
+.buttonContainer2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 330px; 
+    margin-top: 20px;
+    @media (max-width: 768px) {
+      gap: 50px;
+    }
+  
+}
