--- a/proyecto/pregapp/src/pages/instructions/Instructions.css
+++ b/proyecto/pregapp/src/pages/instructions/Instructions.css
@@ -11,15 +11,14 @@
     font-weight: bold;
     color: #000000;
 
+    @media (max-width: 768px) {
+        font-size: 25px;
+      }
 }
 
-.Instructions {
-    background-image: url('../../images/fondo_1.webp');
-    background-size:cover;
-    min-height: 100vh; /* Esto asegura que cubre toda la pantalla */
-    align-items: center;
-   
-    
+.instruction-header{
+    max-width: 800px;
+    margin: 0 auto;
 }
 
 .Instructions .buttonContainer {
@@ -34,4 +33,7 @@
     font-size: 20px;
     font-weight: normal;
     color: #000000;
+    @media (max-width: 768px) {
+        font-size: 16px;
+      }
 }
