--- a/proyecto/pregapp/src/styles/globalStyles.css
+++ b/proyecto/pregapp/src/styles/globalStyles.css
@@ -24,6 +24,16 @@
     
 }
 
+.title{
+    font-size: 30px;
+    font-weight: bold;
+    color: #000000;
+    margin-top: 0px;
+    @media (max-width: 768px) {
+        font-size: 20px;
+        
+    }
+}
 .ventana-popup {
     position: fixed;
     width: 270px;
@@ -51,4 +61,15 @@
 
 .h1-popup {
     font-size: 20px;
+}
+
+.container {
+    background-image: url('../images/fondo_1.webp');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    min-height: 100vh; /* Esto asegura que cubre toda la pantalla */
+    padding: 40px;
+    text-align: center;
+    
 }
