settings estandarizado con el resto del proyecto
he cambiado algunos estilos y donde se ubicaban en el proyecto para que se adapte mejor a la arquitectura que y diseño que estamos usando

--- a/proyecto/pregapp/src/pages/settings/Settings.css
+++ b/proyecto/pregapp/src/pages/settings/Settings.css
@@ -1,76 +1,3 @@
-.settings {
-    background-image: url('../../images/fondo_1.webp');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    min-height: 100vh; /* Esto asegura que cubre toda la pantalla */
-    padding: 40px;
-    text-align: center;
-}
-
-.logo { /* sonido y musica*/
-    width: 150px;     
-    height: auto;        
-    margin: 10px;         
-}
-
-.control-row {
+.settings-row {
     display: flex;             
-    justify-content: space-between; 
-    align-items: center;     
-    margin-bottom: 20px;        /* Añadimos un poco de espacio entre las filas */
 }
-
-/* Estilo del slider */
-.slider-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px;
-}
-  
-.slider {
-    width: 200px;
-    height: 20px;
-    background-color: #ddd;
-    border-radius: 15px;
-    cursor: pointer;
-    -webkit-appearance: none; /* Eliminar estilo predeterminado en Webkit (Chrome, Safari) */
-}
-  
-  /* boton del slider */
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 40px;
-    height: 40px;
-    background-color: #4CAF50;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-  /*Lo mismo deprendiendo del navegador*/
-.slider::-moz-range-thumb {
-    width: 40px;
-    height: 40px;
-    background-color: #4CAF50;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.buttonAdvance2{
-    font-size: 25px;
-    background-color: #2ECC71;
-    color: #000000;
-    border-radius: 30px;
-    width: 200px;
-    height: 52px;
-    margin-left: 30%;
-    border:#000000 0.3px solid;
-    @media (max-width: 768px) {
-        width: 100px;
-        height: 40px;
-        font-size: 20px;
-    }
-} 
-
