--- a/proyecto/pregapp/src/styles/buttons.css
+++ b/proyecto/pregapp/src/styles/buttons.css
@@ -67,6 +67,19 @@ border: 0.3px solid #000000;
     
 }
 }
+.buttonAnswerSelected{
+    width: 730px;
+    height: 40px;
+border-radius: 24px;
+background: lightsteelblue;
+box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+border: 0.3px solid #000000;
+@media (max-width: 768px) {
+    width: 243px;
+    height: 39px;
+    
+}
+}
 .buttonAnswerRight{
     width: 730px;
     height: 40px;
