Pequeños retoques visuales
Hover en los botones y el link.

--- a/proyecto/pregapp/src/pages/logIn/LogIn.css
+++ b/proyecto/pregapp/src/pages/logIn/LogIn.css
@@ -8,6 +8,10 @@
     background-color: transparent;
     border: none;
 }
+.textLink:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
 
 .buttonContainer {
     display: flex;
