:hover en slider de ajustes
Para que el usuario sepa de forma más intuitiva , qué botones puede pulsar

--- a/proyecto/pregapp/src/styles/sliders.css
+++ b/proyecto/pregapp/src/styles/sliders.css
@@ -24,3 +24,7 @@
     border-radius: 50%;
     cursor: pointer;
 }
+
+.slider:hover::-webkit-slider-thumb {
+    box-shadow: #000000 0px 4px 4px 0px;
+}
