--- a/proyecto/pregapp/src/pages/memoryGame/MemoryGame.css
+++ b/proyecto/pregapp/src/pages/memoryGame/MemoryGame.css
@@ -23,7 +23,12 @@
         grid-template-rows: repeat(2, 140px);   
         gap: 10px; 
     }
-   
+   @media screen and (max-width: 768px) {
+        grid-template-columns: repeat(3, 100px); 
+        grid-template-rows: repeat(4, 140px); 
+        gap: 5px; 
+    }
+
   
   }
   
