--- a/proyecto/pregapp/src/pages/question/Question.css
+++ b/proyecto/pregapp/src/pages/question/Question.css
@@ -1,16 +1,19 @@
-.questionBox {
-    padding: 0.75rem;
-    border-radius: 30px;
-    background-color: #FFFFFF;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-    border:#000000 0.3px solid;
-    width: 700px;
-   
-    margin: 0 auto;
+.questionBox {    
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    width: 100%;
     text-align: left;
-
-    @media (max-width: 768px) {
-      width: 282px;
-      height: 155px;
-    }
+}
+.label-for-questionBox{
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  background-color: #FFFFFF;
+  border:#000000 0.3px solid;
+  width: 730px;
+  margin: 0 auto;
+  border-radius: 30px;
+  @media screen and (max-width: 768px) {
+    width: 100%;
+    
+  }
 }
