--- a/proyecto/pregapp/src/pages/settings/Settings.css
+++ b/proyecto/pregapp/src/pages/settings/Settings.css
@@ -1,5 +1,8 @@
 .settings-row {
-    display: flex;             
+    display: flex;  
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+    }           
 }
 
 .textSettings {
@@ -20,7 +23,9 @@
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
     max-width: 500px;
     margin: auto;
+  
 }
+
 
 .checkbox-style {
     display: flex;
