--- a/proyecto/pregapp/src/styles/buttons.css
+++ b/proyecto/pregapp/src/styles/buttons.css
@@ -62,7 +62,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border: 0.3px solid #000000;
     @media (max-width: 768px) {
-        width: 243px;
+        width: 100%;
         height: 39px;
         
     }
@@ -75,7 +75,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border: 0.3px solid #000000;
     @media (max-width: 768px) {
-        width: 243px;
+        width: 100%;
         height: 39px;
         
     }
@@ -93,7 +93,7 @@
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     border: 0.3px solid #000000;
     @media (max-width: 768px) {
-        width: 243px;
+        width: 100%;
         height: 39px;
         
     }
@@ -107,7 +107,7 @@ background: lightsteelblue;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 border: 0.3px solid #000000;
 @media (max-width: 768px) {
-    width: 243px;
+    width: 100%;
     height: 39px;
     
 }
@@ -120,7 +120,7 @@ background:  #2ECC71;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 border: 0.3px solid #000000;
 @media (max-width: 768px) {
-    width: 243px;
+    width: 100%;
     height: 39px;
     
 }
@@ -148,6 +148,7 @@ border: 0.3px solid #000000;
     margin-top: 20px;
     @media (max-width: 768px) {
       gap: 50px;
+      justify-content: space-between;
     }
   
 }
