--- a/proyecto/pregapp/src/styles/globalStyles.css
+++ b/proyecto/pregapp/src/styles/globalStyles.css
@@ -55,6 +55,12 @@
     transform: translate(-50%, -50%);
     background: #ffffff;
     padding: 25px 50px;
+    @media screen and (max-width: 768px) {
+        width: 50%;
+        height: auto;
+        padding: 20px;
+        
+    }
 }
 
 .contenido-popup {
@@ -81,5 +87,4 @@
     min-height: 100vh; /* Esto asegura que cubre toda la pantalla */
     padding: 40px;
     text-align: center;
-    
 }
