--- a/proyecto/pregapp/src/pages/profile/Profile.css
+++ b/proyecto/pregapp/src/pages/profile/Profile.css
@@ -16,3 +16,18 @@
     margin-top: 20px;
 }
 
+.profileText2 {
+    font-size: 25px;
+    font-weight: normal;
+    color: #000000;
+    @media (max-width: 768px) {
+        font-size: 16px;
+      }
+}
+
+.divisor {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+}
