--- a/proyecto/pregapp/src/styles/buttons.css
+++ b/proyecto/pregapp/src/styles/buttons.css
@@ -35,6 +35,25 @@
     box-shadow: #000000 0px 4px 4px 0px;
     cursor: pointer;
 }
+.buttonChain{
+    font-size: 25px;
+    background: lightsteelblue;
+    color: #000000;
+    border-radius: 30px;
+    width: 200px;
+    height: 52px;
+    border:#000000 0.3px solid;
+    @media (max-width: 768px) {
+        width: 130px;
+        height: 40px;
+        font-size: 20px;
+    }
+}
+.buttonChain:hover {
+    box-shadow: #000000 0px 4px 4px 0px;
+    cursor: pointer;
+}
+
 
 .buttonMenu {
     font-size: 20px;
@@ -99,19 +118,7 @@
     }
 }
 
-.buttonAnswerSelected{
-    width: 730px;
-    height: 40px;
-border-radius: 24px;
-background: lightsteelblue;
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-border: 0.3px solid #000000;
-@media (max-width: 768px) {
-    width: 100%;
-    height: 39px;
-    
-}
-}
+
 .buttonAnswerRight{
     width: 730px;
     height: 40px;
