ERRORES DE ACCESIBILIDAD: CONTRASTE
EL COLOR VERDE DE LETRA CORRECTA Y EL COLOR NARANJA DE LATRA POSOIBLE CON ERRORES DE CONTRASTE, corregido

--- a/proyecto/pregapp/src/pages/wordle/Wordle.css
+++ b/proyecto/pregapp/src/pages/wordle/Wordle.css
@@ -35,12 +35,12 @@
   
   /* Estados de color */
   .correct {
-    background-color: #6aaa64; /* Verde */
+    background-color: #43703E; /* Verde */
     color: white;
   }
   
   .present {
-    background-color: #ff7b1d; /* Naranja */
+    background-color: #C25100; /* Naranja */
     color: white;
   }
   
